RESOLVED FIXED171168
[MediaStream] Fix regression caused by r215626
https://bugs.webkit.org/show_bug.cgi?id=171168
Summary [MediaStream] Fix regression caused by r215626
Eric Carlson
Reported 2017-04-22 11:20:59 PDT
MediaStream::mediaState should test muted before m_isProducingData because if both are true we want to report that the stream is muted.
Attachments
Proposed patch. (2.06 KB, patch)
2017-04-22 11:36 PDT, Eric Carlson
no flags
Radar WebKit Bug Importer
Comment 1 2017-04-22 11:21:33 PDT
Eric Carlson
Comment 2 2017-04-22 11:36:45 PDT
Created attachment 307913 [details] Proposed patch.
Eric Carlson
Comment 3 2017-04-22 11:47:04 PDT
Comment on attachment 307913 [details] Proposed patch. Committed https://trac.webkit.org/r215668.
Note You need to log in before you can comment on or make changes to this bug.