[MediaStream] Fix regression caused by r215626 https://bugs.webkit.org/show_bug.cgi?id=171168 <rdar://problem/31774787>

Reviewed by Antoine Quint.

No new tests, fixes fast/mediastream/MediaStream-page-muted.html

* Modules/mediastream/MediaStream.cpp:
(WebCore::MediaStream::mediaState): Test muted before m_isProducingData because if both are
true we want to report that the stream is muted.


Canonical link: https://commits.webkit.org/188072@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215668 268f45cc-cd09-0410-ab3c-d52691b4dbfc